[tool.poetry]
name = "roguearch"
version = "0.0.1"
description = "Roguelike developed for the A&DIS course @ SPbU"
authors = [
    "Georgiy Angeni <angenispb@mail.ru>",
    "Daniil Lyubaev <lyubaevda@gmail.com>",
    "Denis Korotchenko <dzd1024ozd@gmail.com>",
]
readme = "README.md"
packages = [
    {include = "controller"},
    {include = "dungeon"},
    {include = "meta"},
    {include = "screen"},
]

[tool.poetry.dependencies]
python = "^3.11"
blessed = "^1.20.0"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
